[FIX]: Fixed the sort filter so text is left aligned and the size of the label to match the live site ,also fixed the ad poster that apppears after 10th post  to maintain same ratio as products,also fixded the grid icon svg  to match the live site, adjusted more fonts throughout the  to make it more pixel perfect

--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -69,9 +69,10 @@
   }
 
   .price--on-sale .price__sale {
-    display: initial;
+    display: initial; 
     flex-direction: row;
     flex-wrap: wrap;
+    gap:4px;
   }
 
   .price--center {
